G4E-5622: Fixed spilling out of container logo minimize and menu buttons on expand.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -353,7 +353,7 @@ html {
     @include transition("width", 0);
 
     .menu {
-      display: none;
+      display: flex;
 
       .icon-window-minimize {
         font-size: 0.5rem;
@@ -392,8 +392,9 @@ html {
       }
 
       .logo {
-        min-width: 120px;
+        width: 100%;
         margin-left: -3px;
+        overflow: hidden;
       }
     }
 
