--- a/scss/horizontal.scss
+++ b/scss/horizontal.scss
@@ -24,7 +24,6 @@
       position: static;
 
       .logo {
-        min-width: initial;
         overflow: hidden;
       }
 
